Fix vertical alignment for roll chat cards

--- a/src/scss/v2/components/_message.scss
+++ b/src/scss/v2/components/_message.scss
@@ -4,4 +4,9 @@
       font-size: $font-md;
     }
   }
+
+  .dice-formula, .dice-total {
+    padding: 8px 0 2px;
+    line-height: 14px; // 24px parent line height minus padding (8px + 2px)
+  }
 }
